# synthtext

./: .gitignore  CMakeLists.txt  README.md  synth_line.cpp  synth_word.cpp
src/: fileio.cpp  fileio.h  font_info.cpp  font_info.h  normstrngs.cpp  normstrngs.h  pango_font_info.cpp  pango_font_info.h  word_render.cpp  word_render.h
